--- a/src/app/todo/todo.component.scss
+++ b/src/app/todo/todo.component.scss
@@ -1,6 +1,43 @@
-.itemDaLista{
-    margin-top: 30px;
+.pagina{
+    background-color: antiquewhite;
 }
+
+.titulo{
+    display: flex;
+    justify-content: center;
+    
+}
+.butomComf{
+    margin-left: 20px;
+}
+
+.listaompleta{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    background-color: antiquewhite;
+}
+
+.listasgeral{ 
+    display: flex;
+    flex-direction: column;
+    margin-right: 160px;
+    background-color: aqua;
+    border-radius: 10px;
+}
+.listasgeral2{
+    display: flex;
+    flex-direction: column;
+    background-color: aqua;
+    border-radius: 10px;
+}
+
 .boxEItem{
     display: flex;
+    align-items: center;
+}
+
+.butX{
+    background-color: red;
+    border-radius: 50px;
 }
