--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -11,9 +11,9 @@
                 <!-- esta puchando apenas os itens que tem a relacao "falce" -->
                 <div *ngIf="!todo.relacao">
                     <div class="boxEItem">
-                        <input type="checkbox" [(ngModel)]="todo.relacao" (click)="toggleRelacao(todo)">
+                        <input type="checkbox" [(ngModel)]="todo.relacao" (click)="todoRelacao(todo)">
                         <p>{{todo.item}}</p>
-                        <button class="butX">X</button>
+                        <button class="butX" (click)="deletar(todo)">X</button>
                     </div>
                 </div> 
             </div>
@@ -23,7 +23,7 @@
                 <!-- pucha todos os item que esta com a relacao "true" -->
                 <div *ngIf="todo.relacao">
                     <div class="boxEItem">
-                        <input type="checkbox" [(ngModel)]="todo.relacao" (click)="toggleRelacao(todo)">
+                        <input type="checkbox" [(ngModel)]="todo.relacao" (click)="todoRelacao(todo)">
                         <p>{{todo.item}}</p>
                         <button class="butX" (click)="deletar(todo)">X</button>
                     </div>
